# Generated by Django 6.0.5 on 2026-07-11 00:00

import apps.ofertas.models
import django.db.models.deletion
import django.utils.timezone
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('repuestos', '0001_initial'),
        ('vehiculos', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Fotografia',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('imagen', models.FileField(blank=True, help_text='Solo se admiten archivos JPG o PNG, máximo 10MB.', null=True, upload_to='ofertas/fotografias/', validators=[apps.ofertas.models.validar_extension_imagen, apps.ofertas.models.validar_tamanio_imagen])),
                ('fecha_carga', models.DateTimeField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='Urgencia',
            fields=[
                ('id_urgencia', models.AutoField(primary_key=True, serialize=False)),
                ('nombre_pieza_requerida', models.CharField(max_length=150, verbose_name='Pieza Necesitada')),
                ('descripcion_contexto', models.TextField(verbose_name='Descripción del Contexto / Situación')),
                ('fecha_hora_publicacion', models.DateTimeField(default=django.utils.timezone.now, verbose_name='Fecha y Hora de Publicación')),
                ('puntos_recompensa_extra', models.FloatField(verbose_name='Puntos de Recompensa Extra')),
                ('activa', models.BooleanField(default=True, verbose_name='¿Sigue Activa?')),
                ('estado_tramite', models.CharField(choices=[('libre', 'Libre'), ('revision', 'En Revisión'), ('completada', 'Completada')], default='libre', max_length=20)),
            ],
        ),
        migrations.CreateModel(
            name='MatrizCompatibilidad',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('repuesto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='repuestos.repuesto')),
                ('vehiculo', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='vehiculos.vehiculo')),
            ],
        ),
        migrations.CreateModel(
            name='Oferta',
            fields=[
                ('id_inventario', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('valor_puntos', models.FloatField(default=0.0, editable=False)),
                ('tipo_tasacion', models.CharField(choices=[('algoritmico', 'Tasación Automática'), ('directo', 'Intercambio Directo'), ('tiempo', 'Banco de Tiempo')], default='algoritmico', max_length=20)),
                ('fecha_publicacion', models.DateTimeField(auto_now_add=True)),
                ('estado_oferta', models.BooleanField(default=True)),
                ('rango_horario', models.CharField(help_text='Ej: Lunes a Viernes 8am-4pm', max_length=200)),
                ('referencia_ubicacion', models.TextField(help_text='Indicaciones para el encuentro')),
                ('repuesto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ofertas', to='repuestos.repuesto')),
            ],
            options={
                'verbose_name': 'Oferta',
                'verbose_name_plural': 'Ofertas',
            },
        ),
    ]
